# Partiel_CTO_05_07_2024

./: Procfile  README.md  pyproject.toml  requirements.txt  test.db
backend/: __init__.py  crud.py  curl_poster.py  database.py  main.py  models.py  paypal.py  schemas.py  versel.json
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: MemberForm.js  MemberList.js  PayPalButton.js
frontend/src/pages/: PaymentExecution.js
github/workflows/: ci.yml
