[tool.poetry]
name = "sport_association"
version = "0.1.0"
description = "Partiel_CTO"
authors = ["ibrahima-eemi <ibrahima.diallo@eemi.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "backend" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
